@@ -82,6 +82,7 @@ t            select by tty
 OUTPUT FORMAT CONTROL
 -O           is preloaded "-o"
 -F           extra full format
+-M           add column for security data
 -c           different scheduler info for -l option
 -f           does full listing
 -j           jobs format
@@ -90,6 +91,7 @@ OUTPUT FORMAT CONTROL
 -y           do not show flags; show rss in place of addr
 O            is preloaded "o" (overloaded)
 X            old Linux i386 register format
+Z            add column for security data
 j            job control format
 l            display long format
 o            specify user-defined format
