@@ -1,7 +1,9 @@
 procps-3.2.0 --> procps-3.2.1
 
-build w/ curses in odd location
+build even w/ curses in an odd location
 ps: STAT flags for fg process group and session leader
+ps: STAT flags for swapped out process dropped (was broken)
+ps: new -M and Z options for security data (SE Linux, etc.)
 
 procps-3.1.15 --> procps-3.2.0
 
